@@ -95,4 +95,4 @@ in command-line mode.
 Brian Callahan (a.k.a. ibara) fixed build on OpenBSD.
 
 Cosmin Popescu (a.k.a. cosminadrianpopescu) added "*" to 'slowfs', match numbers
-to search messages, :shell!.
+to search messages, :shell!, extension sorting fix.
