@@ -113,6 +113,9 @@
 
 	Fixed slashes type on Windows on loading custom view with relative paths.
 
+	Fixed unstable extension sorting for dot files.  Patch by Cosmin
+	Popescu (a.k.a. cosminadrianpopescu).
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
